--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -195,7 +195,7 @@
       <p>If you have any questions or concerns about this Privacy Policy or our data practices, please contact us at:</p>
       
       <div class="contact-info">
-        <p><i class="fas fa-envelope"></i> Email: <strong>xyz@grade-ant.com</strong></p>
+        <p><i class="fas fa-envelope"></i> Email: <strong> contact@gradeant.com</strong></p>
       </div>
     </div>
   </div>
