--- a/legal/terms.html
+++ b/legal/terms.html
@@ -205,7 +205,7 @@
     <h2><i class="fas fa-envelope"></i> 12. Contact Information</h2>
     <div class="contact-info">
       <p>
-        If you have any questions about these Terms, please contact us at: <strong>xyz@grade-ant.com</strong>
+        If you have any questions about these Terms, please contact us at: <strong> contact@gradeant.com</strong>
       </p>
     </div>
   </div>
