--- a/resoures/about.html
+++ b/resoures/about.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="story-content">
         <h2>Our Story</h2>
-        <p>GradeAnt began in 2023 when a group of educators and technologists came together with a shared vision: to solve one of education's most persistent challenges - the grading bottleneck.</p>
+        <p>GradeAnt began in 2024 when a group of educators and technologists came together with a shared vision: to solve one of education's most persistent challenges - the grading bottleneck.</p>
         <p>After spending countless late nights grading papers, our founders realized there had to be a better way. They set out to build an AI-powered grading assistant that could understand nuanced responses while maintaining the human touch that makes feedback valuable.</p>
         <p>Today, GradeAnt helps thousands of educators across the globe reclaim their time while providing more consistent, thoughtful feedback to their students.</p>
       </div>
@@ -72,13 +72,31 @@
         <div class="team-member">
           <img src="..\img\shradha.jpg" alt="Team Member">
           <h3>Shradha</h3>
-          <p class="member-title">Head of Product</p>
+          <p class="member-title">Head of AI</p>
           <p>Educational technologist with over 15 years of experience in EdTech.</p>
         </div>
         <div class="team-member">
           <img src="..\img\tariq.jpg" alt="Team Member">
           <h3>Tariq</h3>
           <p class="member-title">Head of Pedagogy</p>
+          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
+        </div>
+                <div class="team-member">
+          <img src="..\img\nirlanjan_chakarborty.jpg" alt="Team Member">
+          <h3>Nilanjan Chakraborty</h3>
+          <p class="member-title">Assistant Professor Mathematics and Statistics</p>
+          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
+        </div>
+                <div class="team-member">
+          <img src="..\img\Don_Wunsh.jpg" alt="Team Member">
+          <h3>Don Wunsh</h3>
+          <p class="member-title">Professor Electrical and Computer Engineering</p>
+          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
+        </div>
+                <div class="team-member">
+          <img src="..\img\Kania_beth.jpg" alt="Team Member">
+          <h3>Kania beth</h3>
+          <p class="member-title">Professor</p>
           <p>Former principal and curriculum specialist focused on assessment strategies.</p>
         </div>
       </div>
