--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
         <div class="footer-column">
           <h3>Contact Us</h3>
           <ul>
-            <li><a href="mailto:info@gradeant.com">xyzinfo@gradeant.com</a></li>
+            <li><a href="mailto:info@gradeant.com">contact@gradeant.com</a></li>
             <li><a href="tel:+xxxxxxxxxxxxxx">+x (xxx) xxx-xxxx</a></li>
-            <li>ABCD , XYZ<br>Tech City, AI 90210</li>
+            <li>ABCD <br>Tech City, AI 90210</li>
           </ul>
           <div class="social-icons mt-3">
             <a href="#linkedin"><span>in</span></a>
