--- a/quick_links/features.html
+++ b/quick_links/features.html
@@ -22,7 +22,7 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#demo" class="nav-link">Demo</a>
                 <a href="#how-it-works" class="nav-link">How It Works</a>
-                <a href="#testimonials" class="nav-link">Testimonials</a>
+                <!-- <a href="#testimonials" class="nav-link">Testimonials</a> -->
             </nav>
         </div>
     </div>
@@ -454,7 +454,7 @@
                             <li><a href="#features" class="footer-link">Features</a></li>
                             <li><a href="#demo" class="footer-link">Demo</a></li>
                             <li><a href="#how-it-works" class="footer-link">How It Works</a></li>
-                            <li><a href="#testimonials" class="footer-link">Testimonials</a></li>
+                            <!-- <li><a href="#testimonials" class="footer-link">Testimonials</a></li> -->
                         </ul>
                     </div>
                     <div class="footer-column">
