--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </a>
       <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
       <div class="nav-links" id="navLinks">
+        <a href="../index.html" class="active">Home</a>
         <!-- <a href="Frontend\Gradeant_dashboard.html">Dashboard</a> -->
         <a href="..\resoures\about.html">About</a>
         <!-- <a href="resoures\blog.html">Blog</a> -->
