--- a/teacher/teacher_view_grade.html
+++ b/teacher/teacher_view_grade.html
@@ -34,19 +34,19 @@
               <nav class="secondary-nav" aria-label="User Type Navigation">
                 <ul class="nav-tabs" role="tablist">
                   <li role="presentation">
-                    <button class="tab-btn active" id="student-view-btn" data-tab="student-view" aria-selected="true">
+                    <button class="tab-btn" id="student-view-btn" data-tab="student-view" aria-selected="true">
                       <i class="fas fa-user-graduate"></i> Single Student's Assignment Info View
                     </button>
                   </li>
                   <li role="presentation">
-                    <button class="tab-btn" id="teacher-view-btn" data-tab="teacher-view" aria-selected="false">
+                    <button class="tab-btn active" id="teacher-view-btn" data-tab="teacher-view" aria-selected="false">
                       <i class="fas fa-chalkboard-teacher"></i> All Student Summary View
                     </button>
                   </li>
                 </ul>
               </nav>
   
-              <div id="student-view" class="sub-tab-content active">
+              <div id="student-view" class="sub-tab-content" style="display: none;">
                 <h3>View Your Assignment Grades</h3>
                 <form id="student-grade-form" class="form">
                   <div class="form-row">
@@ -95,7 +95,7 @@
                 <button class="print-button" onclick="window.print()">Print Section</button>
               </div>
   
-              <div id="teacher-view" class="sub-tab-content" style="display: none;">
+              <div id="teacher-view" class="sub-tab-content active">
                 <h3>All Student Grades</h3>
                 <form id="teacher-grade-form" class="form">
                   <div class="form-row">
