update teacher dashboard

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
         <div class="footer-column">
           <h3>Contact Us</h3>
           <ul>
-            <li><a href="mailto:info@gradeant.com">contact@gradeant.com</a></li>
-            <li><a href="tel:+xxxxxxxxxxxxxx">+x (xxx) xxx-xxxx</a></li>
-            <li>ABCD <br>Tech City, AI 90210</li>
+            <li><a href="mailto:contact@gradeant.com">contact@gradeant.com</a></li>
+            <li><a href="tel:+1-573-341-4720">+1-573-341-4720</a></li>
+            <li>222 Fulton Hall, 301 W. 14th Street, Rolla MO 65409</li>
           </ul>
           <div class="social-icons mt-3">
             <a href="#linkedin"><span>in</span></a>
