--- a/resoures/about.html
+++ b/resoures/about.html
@@ -57,48 +57,62 @@
     <div class="container">
       <h2 class="section-title">Meet Our Team</h2>
       <div class="team-grid">
+
         <div class="team-member">
+          <img src="..\img\shradha.jpg" alt="Team Member">
+          <h3>Dr. Shradha Agarwal</h3>
+          <p class="member-title">Head of AI</p>
+          <h4>Subject Matter Expert: </h4>
+          <p class="expertise">Physics and Artificial Intelligence</p>
+          <h4>about:</h4>
+          <p>Team Lead, Researches AI applications in physics education, computer vision for Nuclear Physics, and document analysis and processing.</p>
+        </div>
+                <div class="team-member">
+          <img src="..\img\nirlanjan_chakarborty.jpg" alt="Team Member">
+          <h3>Dr. Nilanjan Chakraborty</h3>
+          <p class="member-title">Assistant Professor Mathematics and Statistics</p>
+          <h4>Subject Matter Expert: </h4>
+          <p class="expertise">Mathematics and Statistics</p>
+          <h4>about:</h4>
+          <p>Assistant Professor of Mathematics and Statistics at Missouri S&T, focusing on advanced statistical inference and AI.</p>
+        </div>
+        <div class="team-member">
+          <img src="..\img\Don_Wunsh.jpg" alt="Team Member">
+          <h3>Dr. Donald C. Wunsch</h3>
+          <p class="member-title">Professor Electrical and Computer Engineering</p>
+          <h4>Subject Matter Expert: </h4>
+          <p class="expertise">Electrical and Computer Engineering</p>
+          <h4>about:</h4>
+          <p>A distinguished professor and director of the Kummer Centre at Missouri S&T, specializing in neural networks, reinforcement learning, and XAI.</p>
+        </div>
+        <div class="team-member">
+          <img src="..\img\Kania_beth.jpg" alt="Team Member">
+          <h3>Dr. Beth Kania-Gosche</h3>
+          <p class="member-title">Professor</p>
+          <h4>Subject Matter Expert: </h4>
+          <p class="expertise">Education and Cognitive Science</p>
+          <h4>about:</h4>
+          <p>Chair of Education at Missouri S&T, with expertise in STEM education and teacher preparation programs.</p>
+        </div>
+        <div class="team-member">
+          <img src="..\img\tariq.jpg" alt="Team Member">
+          <h3>Tariq Jamil</h3>
+          <p class="member-title">Head of Pedagogy</p>
+          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
+        </div>
+                <div class="team-member">
           <img src="..\img\deepak.jpg" alt="Team Member">
-          <h3>Deepak</h3>
+          <h3>Deepak Rajbhar</h3>
           <p class="member-title">AI Engineer</p>
           <p>AI/ML Engineer for EdTech and AI.</p>
         </div>
         <div class="team-member">
           <img src="..\img\narayan.jpg" alt="Team Member">
-          <h3>Narayan</h3>
+          <h3>Narayan Adhikari</h3>
           <p class="member-title">AI Engineer</p>
           <p>AI researcher specializing in natural language processing and education.</p>
         </div>
-        <div class="team-member">
-          <img src="..\img\shradha.jpg" alt="Team Member">
-          <h3>Shradha</h3>
-          <p class="member-title">Head of AI</p>
-          <p>Educational technologist with over 15 years of experience in EdTech.</p>
-        </div>
-        <div class="team-member">
-          <img src="..\img\tariq.jpg" alt="Team Member">
-          <h3>Tariq</h3>
-          <p class="member-title">Head of Pedagogy</p>
-          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
-        </div>
-                <div class="team-member">
-          <img src="..\img\nirlanjan_chakarborty.jpg" alt="Team Member">
-          <h3>Nilanjan Chakraborty</h3>
-          <p class="member-title">Assistant Professor Mathematics and Statistics</p>
-          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
-        </div>
-                <div class="team-member">
-          <img src="..\img\Don_Wunsh.jpg" alt="Team Member">
-          <h3>Don Wunsh</h3>
-          <p class="member-title">Professor Electrical and Computer Engineering</p>
-          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
-        </div>
-                <div class="team-member">
-          <img src="..\img\Kania_beth.jpg" alt="Team Member">
-          <h3>Kania beth</h3>
-          <p class="member-title">Professor</p>
-          <p>Former principal and curriculum specialist focused on assessment strategies.</p>
-        </div>
+
       </div>
     </div>
   </section>
