--- a/resoures/contact.html
+++ b/resoures/contact.html
@@ -215,15 +215,14 @@
             <div class="info-icon">📧</div>
             <div class="info-content">
               <h3>Email</h3>
-              <p>hello@gradeant.com</p>
-              <p>support@gradeant.com</p>
+              <p>contact@gradeant.com</p>
             </div>
           </div>
           <div class="info-item">
             <div class="info-icon">📱</div>
             <div class="info-content">
               <h3>Phone</h3>
-              <p>+x (xxx) xxx-xxxx</p>
+              <p>+1-573-341-4720</p>
               <p>Mon-Fri: 9AM - 5PM EST</p>
             </div>
           </div>
@@ -231,8 +230,8 @@
             <div class="info-icon">📍</div>
             <div class="info-content">
               <h3>Location</h3>
-              <p>123 Education Lane</p>
-              <p>San Francisco, CA 94105</p>
+              <p>222 Fulton Hall, 301 W. </p>
+              <p>14th Street, Rolla MO 65409</p>
             </div>
           </div>
           <div class="social-links">
@@ -282,7 +281,7 @@
       </div>
       <div class="faq-item">
         <div class="faq-question">
-          <h3>Is my students' data secure?</h3>
+          <h3>Is my students data secure?</h3>
           <span class="faq-toggle">+</span>
         </div>
         <div class="faq-answer">
