--- a/resoures/about.html
+++ b/resoures/about.html
@@ -63,9 +63,9 @@
           <h3>Dr. Shradha Agarwal</h3>
           <p class="member-title">Head of AI</p>
           <h4>Subject Matter Expert: </h4>
-          <p class="expertise">Physics and Artificial Intelligence</p>
-          <h4>about:</h4>
-          <p>Team Lead, Researches AI applications in physics education, computer vision for Nuclear Physics, and document analysis and processing.</p>
+          <p class="expertise">Physics</p>
+          <h4>About:</h4>
+          <p>Head of ML/AI at a stealth startup. Leads advanced LLM projects including RAG, prompt engineering, subject classification, and OCR-based image analysis. Specialized in NLP, Computer Vision, and Generative AI with deep expertise in GANs, transformers, and diffusion models.</p>
         </div>
                 <div class="team-member">
           <img src="..\img\nirlanjan_chakarborty.jpg" alt="Team Member">
@@ -73,7 +73,7 @@
           <p class="member-title">Assistant Professor Mathematics and Statistics</p>
           <h4>Subject Matter Expert: </h4>
           <p class="expertise">Mathematics and Statistics</p>
-          <h4>about:</h4>
+          <h4>About:</h4>
           <p>Assistant Professor of Mathematics and Statistics at Missouri S&T, focusing on advanced statistical inference and AI.</p>
         </div>
         <div class="team-member">
@@ -82,7 +82,7 @@
           <p class="member-title">Professor Electrical and Computer Engineering</p>
           <h4>Subject Matter Expert: </h4>
           <p class="expertise">Electrical and Computer Engineering</p>
-          <h4>about:</h4>
+          <h4>About:</h4>
           <p>A distinguished professor and director of the Kummer Centre at Missouri S&T, specializing in neural networks, reinforcement learning, and XAI.</p>
         </div>
         <div class="team-member">
@@ -91,7 +91,7 @@
           <p class="member-title">Professor</p>
           <h4>Subject Matter Expert: </h4>
           <p class="expertise">Education and Cognitive Science</p>
-          <h4>about:</h4>
+          <h4>About:</h4>
           <p>Chair of Education at Missouri S&T, with expertise in STEM education and teacher preparation programs.</p>
         </div>
         <div class="team-member">
