--- a/resoures/contact.html
+++ b/resoures/contact.html
@@ -281,7 +281,7 @@
       </div>
       <div class="faq-item">
         <div class="faq-question">
-          <h3>Is my students data secure?</h3>
+          <h3>Is my student's data secure?</h3>
           <span class="faq-toggle">+</span>
         </div>
         <div class="faq-answer">
