--- a/teacher/teacher_upload.html
+++ b/teacher/teacher_upload.html
@@ -40,6 +40,7 @@
                   <select id="upload-type" class="form-control" required>
                     <option value="">Select Upload Type</option>
                     <option value="teacher">Teacher Question Paper</option>
+                    <option value="answer">Teacher solution</option>
                   </select>
                 </div>
                 <div class="form-group">
