--- a/dashboards/teacher_dashboard.html
+++ b/dashboards/teacher_dashboard.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <script src="../component-loader.js"></script>
+  <script >setupNavLinkHighlighting();</script>
 </head>
 <body>
 <!-- Navigation will be loaded here -->
