--- a/resoures/about.html
+++ b/resoures/about.html
@@ -5,6 +5,238 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GradeAnt | About Us</title>
   <link rel="stylesheet" href="styles.css">
+      <style>
+
+
+        /* Section Title */
+        .section-title {
+            text-align: center;
+            font-size: 2.5em;
+            color: #2c3e50; /* Dark blue/gray */
+            margin-bottom: 50px;
+            font-weight: 700;
+            position: relative;
+        }
+
+        .section-title::after {
+            content: '';
+            display: block;
+            width: 80px;
+            height: 4px;
+            background-color: #007bff; /* Accent blue */
+            margin: 15px auto 0;
+            border-radius: 2px;
+        }
+
+        /* Team Grid */
+        .team-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Responsive columns */
+            gap: 30px; /* Space between cards */
+        }
+
+        /* Team Member Card */
+        .team-member {
+            background-color: #ffffff; /* White background for cards */
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08); /* Subtle shadow */
+            padding: 30px;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .team-member:hover {
+            transform: translateY(-5px); /* Slight lift on hover */
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+        }
+
+        .team-member img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%; /* Circular image */
+            object-fit: cover; /* Cover the area */
+            border: 4px solid #e9ecef; /* Light border around image */
+            margin-bottom: 25px;
+        }
+
+        .team-member h3 {
+            font-size: 1.6em;
+            color: #2c3e50;
+            margin-bottom: 8px;
+            font-weight: 600;
+        }
+
+        .team-member .member-title {
+            font-size: 1em;
+            color: #6c757d; /* Gray for titles */
+            margin-bottom: 15px;
+        }
+
+        .team-member h4 {
+            font-size: 1.1em;
+            color: #495057;
+            margin-top: 15px;
+            margin-bottom: 5px;
+            font-weight: 600;
+        }
+
+        .team-member .expertise {
+            font-size: 0.95em;
+            color: #007bff; /* Accent blue for expertise */
+            font-weight: 500;
+            margin-bottom: 15px;
+        }
+
+        .team-member p {
+            font-size: 0.9em;
+            color: #555;
+            line-height: 1.7;
+            text-align: center; /* Adjust as per preference, can be left */
+            flex-grow: 1; /* Allows 'About' section to take available space */
+        }
+
+        /* Optional: Categorization within the grid */
+        .team-category-title {
+            width: 100%;
+            text-align: center;
+            font-size: 1.8em;
+            color: #34495e;
+            margin-top: 40px;
+            margin-bottom: 30px;
+            font-weight: 600;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .section-title {
+                font-size: 2em;
+            }
+            .team-grid {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 20px;
+            }
+            .team-member {
+                padding: 25px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .team-grid {
+                grid-template-columns: 1fr; /* Single column on small screens */
+            }
+            .team-member img {
+                width: 120px;
+                height: 120px;
+            }
+            .team-member h3 {
+                font-size: 1.4em;
+            }
+        }
+
+                /* Section Title (consistent with Team Section) */
+        .section-title {
+            text-align: center;
+            font-size: 2.5em;
+            color: #2c3e50; /* Dark blue/gray */
+            margin-bottom: 50px;
+            font-weight: 700;
+            position: relative;
+        }
+
+        .section-title::after {
+            content: '';
+            display: block;
+            width: 80px;
+            height: 4px;
+            background-color: #007bff; /* Accent blue */
+            margin: 15px auto 0;
+            border-radius: 2px;
+        }
+
+        /* Values Grid */
+        .values-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive columns */
+            gap: 30px; /* Space between cards */
+            padding-bottom: 50px; /* Add some padding at the bottom of the grid */
+        }
+
+        /* Value Card */
+        .value-card {
+            background-color: #ffffff; /* White background for cards */
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08); /* Subtle shadow */
+            padding: 40px 30px; /* More vertical padding for a spacious feel */
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center content vertically and horizontally */
+            justify-content: flex-start; /* Align content to the top */
+        }
+
+        .value-card:hover {
+            transform: translateY(-5px); /* Slight lift on hover */
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+        }
+
+        .value-icon {
+            font-size: 3em; /* Larger icon size */
+            margin-bottom: 20px;
+            line-height: 1; /* Prevents extra space around emoji */
+            color: #007bff; /* Optional: If using FontAwesome, color the icon */
+        }
+
+        .value-card h3 {
+            font-size: 1.6em;
+            color: #2c3e50;
+            margin-bottom: 12px;
+            font-weight: 600;
+        }
+
+        .value-card p {
+            font-size: 0.95em;
+            color: #555;
+            line-height: 1.7;
+            text-align: center;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .section-title {
+                font-size: 2em;
+            }
+            .values-grid {
+                grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); /* Slightly smaller min-width */
+                gap: 20px;
+            }
+            .value-card {
+                padding: 30px 20px;
+            }
+            .value-icon {
+                font-size: 2.5em;
+                margin-bottom: 15px;
+            }
+            .value-card h3 {
+                font-size: 1.4em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .values-grid {
+                grid-template-columns: 1fr; /* Single column on small screens */
+            }
+            .value-card {
+                padding: 25px 15px;
+            }
+            .value-icon {
+                font-size: 2.2em;
+            }
+        }
+    </style>
 </head>
 <body>
   <!-- Navbar -->
@@ -47,7 +279,7 @@
         <p>Today, GradeAnt helps thousands of educators across the globe reclaim their time while providing more consistent, thoughtful feedback to their students.</p>
       </div>
       <div class="story-image">
-        <img src="..\img\group.jpg" alt="GradeAnt Team">
+        <img src="..\img\group.jpeg" alt="GradeAnt Team">
       </div>
     </div>
   </section>
