update themes and workflow

--- a/student/student_upload.html
+++ b/student/student_upload.html
@@ -24,6 +24,7 @@
 <body>
   <!-- Navigation will be loaded here -->
   <div id="nav"></div>
+  <main class="main-content">
   <div class="container">
       <section id="upload-section" class="tab-content active" role="tabpanel" aria-labelledby="upload-tab-btn">
         <div class="card">
