--- a/teacher/teacher_view_grade.html
+++ b/teacher/teacher_view_grade.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-
+<div class="particles"></div>
   <!-- Navigation will be loaded here -->
   <div id="nav"></div>
   <main class="main-content">
