--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>GradeAnt | AI-Powered STEM Homework Grading</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- Styles -->
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="..\css\index.css" />
 </head>
 <body>
   <!-- Navbar -->
